Fixes background graphic alignment by adding min-height

--- a/src/style/components/_portfolio.scss
+++ b/src/style/components/_portfolio.scss
@@ -11,6 +11,7 @@
 .portfolio {
     position: relative;
     z-index: 5;
+    min-height: 500px;
 }
 
 div.portfolio-info-panel {
